--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,15 @@
 	"type": "project-online-pajak",
 	"require-dev": {
         "phpunit/phpunit": "^8"
-    }
+    },
+	"autoload": {
+		"psr-4": {
+		  "Pajak\\": "src/"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+		  "Pajak\\Tests\\": "tests/"
+		}
+	}
 }
